--- a/index.html
+++ b/index.html
@@ -260,7 +260,26 @@
                 </div>
 
                     </div>
+                    <footer class="artist-social">
+                                            <a href="https://daniginanjar.github.io/danimonius.github.io/" target="_blank" class="social-link ig">
+                            Danimonius (Demo)
+                        </a>
+                                            <a href="https://daniginanjar.github.io/rawmix-2017/" target="_blank" class="social-link ig">
+                            Rawmix 2017
+                        </a>
+                                            <a href="https://daniginanjar.github.io/covertur-par-danimonius/" target="_blank" class="social-link ig">
+                            Covertur par Danimonius
+                        </a>
+                                            <a href="https://daniginanjar.github.io/khiva/" target="_blank" class="social-link ig">
+                            KHIVA(2021)
+                        </a>
+                                            <a href="https://daniginanjar.github.io/molcool-eternal-legacy/" target="_blank" class="social-link ig">
+                            Molcool - Eternal Legacy(2022)
+                        </a>
+                    </footer>
     </div>
+
+    
 
     <script src="./index_files/player.js.download"></script>
 
