--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </p>
 
                 <p class="album-copyright">
-                    © 2026 DANIMONIUS                </p>
+                    © 2026 DANIMONIUS ALL RIGHT RESERVED</p>
 
                 <div class="artist-social">
                                             <a href="https://instagram.com/danimonius" target="_blank" class="social-link ig">
