--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 <h1>DANIMONIUS (demo)</h1>
 
                 <p>
-                    DANIMONIUS • 2026<br>
-                    <small>Rock Alternative / Grunge / Nu Metal • Indie / TENGKORAKGARUT Record</small><br>
-                    <small>It's about Rage, Warning, and Survival while living in a rot country</small>
+                    DANIMONIUS (2026)<br>
+                    <small>ROCK ALTERNATIVE / GRUNGE / NU METAL / INDIE / TENGKORAKGARUT Records</small><br>
+                    <small>This is about Rage, Warning, and Survival while living in a rot country</small>
                 </p>
 
                 <p class="album-copyright">
-                    © 2026 DANIMONIUS ALL RIGHT RESERVED</p>
+                    © Copyright Danimonius All Right Reserved</p>
 
                 <div class="artist-social">
                                             <a href="https://instagram.com/danimonius" target="_blank" class="social-link ig">
