--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
             <img src="./index_files/danimonius-demo-artwork.jpg" class="album-art">
 
             <div class="album-info">
-                <h1>DANIMONIUS (demo)</h1>
+                <h1>Lorem Ipsum Dolor </h1>
 
                 <p>
-                    DANIMONIUS (2026)<br>
-                    <small>ROCK ALTERNATIVE / GRUNGE / NU METAL / INDIE / TENGKORAKGARUT Records</small><br>
-                    <small>This is about Rage, Warning, and Survival while living in a rot country</small>
+                    Lorem Ipsum Dolor Sit Amet<br>
+                    <small>Lorem Ipsum Dolor Sit Amet</small><br>
+                    <small>Lorem Ipsum Dolor Sit Amet</small>
                 </p>
 
                 <p class="album-copyright">
-                    © Copyright Danimonius All Right Reserved</p>
+                    Lorem Ipsum Dolor Sit Amet</p>
 
                 <div class="artist-social">
                                             <a href="https://instagram.com/danimonius" target="_blank" class="social-link ig">
