--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
             <img src="./index_files/danimonius-demo-artwork.jpg" class="album-art">
 
             <div class="album-info">
-                <h1>Lorem Ipsum Dolor </h1>
+                <h1>DANIMONIUS DEMO (2026) </h1>
 
                 <p>
-                    Lorem Ipsum Dolor Sit Amet<br>
-                    <small>Lorem Ipsum Dolor Sit Amet</small><br>
-                    <small>Lorem Ipsum Dolor Sit Amet</small>
+                    DANIMONIUS DEMO (2026)<br>
+                    <small>Rcok Alternative / Grunge / Nu Metal / Indie - TENGKORAKGARUT Records</small><br>
+                    <small>This is about RAGE, WARNING, and SURVIVAL while living in the rot country</small>
                 </p>
 
                 <p class="album-copyright">
-                    Lorem Ipsum Dolor Sit Amet</p>
+                    © Copyright By Danimonius 2026 All Right Reserved</p>
 
                 <div class="artist-social">
                                             <a href="https://instagram.com/danimonius" target="_blank" class="social-link ig">
