--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                 <p>
                     DANIMONIUS DEMO (2026)<br>
-                    <small>Rcok Alternative / Grunge / Nu Metal / Indie - TENGKORAKGARUT Records</small><br>
+                    <small>Rock Alternative / Grunge / Nu Metal / Indie - TENGKORAKGARUT Records</small><br>
                     <small>This is about RAGE, WARNING, and SURVIVAL while living in the rot country</small>
                 </p>
 
